--- a/src/SSDTLifecycleExtension/Windows/VersionHistoryWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/VersionHistoryWindowControl.xaml
@@ -7,12 +7,8 @@
              Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
              Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
-             Name="MyToolWindow">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <TextBlock Margin="10" HorizontalAlignment="Center">VersionHistoryWindow</TextBlock>
-            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>
-        </StackPanel>
     </Grid>
 </UserControl>
