Introduced new "InitializedOnce" property to ScriptCreationViewModel to prevent UI flickering during first initialization

--- a/src/SSDTLifecycleExtension/Windows/ScriptCreationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ScriptCreationWindowControl.xaml
@@ -64,7 +64,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Visibility="{Binding InitializedOnce, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
         <!-- Scaffolding -->
         <GroupBox Header="Scaffolding"
                   Style="{StaticResource CenteredGroupBoxStyle}"
