--- a/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
+<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:viewModels="clr-namespace:SSDTLifecycleExtension.ViewModels"
-             Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
+             Background="{DynamicResource {x:Static vsshell:VsBrushes.ToolWindowBackgroundKey}}"
              Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
              mc:Ignorable="d"
              d:DesignHeight="300"
@@ -228,7 +228,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid Margin="10">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
@@ -238,7 +238,8 @@
         <!-- Content -->
         <ScrollViewer Grid.Row="0"
                       VerticalScrollBarVisibility="Auto"
-                      HorizontalScrollBarVisibility="Disabled">
+                      HorizontalScrollBarVisibility="Disabled"
+                      Margin="10,10,10,0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -591,10 +592,17 @@
             </Grid>
         </ScrollViewer>
 
+        <Rectangle Grid.Row="1"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Top"
+                   Height="4"
+                   Fill="{DynamicResource {x:Static vsshell:VsBrushes.ToolWindowBorderKey}}"/>
+
         <!-- Actions -->
         <StackPanel Grid.Row="2"
                     Orientation="Horizontal"
-                    HorizontalAlignment="Right">
+                    HorizontalAlignment="Right"
+                    Margin="10,0,10,10">
             <Button Command="{Binding ResetConfigurationToDefaultCommand}"
                     Style="{StaticResource ActionButtonStyle}"
                     Content="Reset Configuration to Default"/>
